--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "core-bot",
+    "name": "qnamaker-bot",
     "version": "1.0.0",
-    "description": "A bot that demonstrates core AI capabilities",
+    "description": "Bot Builder v4 using QnA Maker service with active learning and multi-turn experience.",
     "author": "Microsoft",
     "license": "MIT",
     "main": "index.js",
     "scripts": {
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
-        "lint": "eslint .",
+        "lint": "./node_modules/.bin/eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -16,23 +16,19 @@
         "url": "https://github.com/Microsoft/BotBuilder-Samples.git"
     },
     "dependencies": {
-        "@microsoft/recognizers-text-data-types-timex-expression": "1.1.4",
-        "botbuilder": "^4.9.3",
-        "botbuilder-ai": "~4.9.1",
-        "botbuilder-azure": "^4.9.3",
-        "botbuilder-cognitiveservices": "^1.2.0",
-        "botbuilder-dialogs": "~4.9.1",
-        "botbuilder-testing": "~4.9.1",
+        "botbuilder": "4.9.0",
+        "botbuilder-ai": "4.9.0",
+        "botbuilder-dialogs": "4.9.0",
         "dotenv": "^8.2.0",
-        "restify": "^8.5.1"
+        "restify": "~8.4.0"
     },
     "devDependencies": {
-        "eslint": "^7.0.0",
-        "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-node": "^11.1.0",
+        "eslint": "^6.6.0",
+        "eslint-config-standard": "^14.1.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-node": "^10.0.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "nodemon": "~2.0.4"
+        "nodemon": "~1.19.4"
     }
 }
