--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^2.10.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
