--- a/New/react-valeo/package.json
+++ b/New/react-valeo/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "valeo",
+  "name": "react-valeo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.2",
-    "chart.js": "^2.9.3",
-    "concurrently": "^5.3.0",
     "firebase": "^7.17.2",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-chartjs-2": "^2.10.0",
-    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.1",
     "react-with-firebase-auth": "^1.3.2"
   },
   "scripts": {
@@ -27,7 +18,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
